results/SpecGenBench/4-shot/log-MatrixMul-2023_11_27_23_59_06.txt
public class MatrixMul {
    //@ requires a.length == 2 && a[0].length == 2 && b.length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \result[0][0] == a[0][0] * b[0][0] + a[0][1] * b[1][0];
    //@ ensures \result[0][1] == a[0][0] * b[0][1] + a[0][1] * b[1][1];
    //@ ensures \result[1][0] == a[1][0] * b[0][0] + a[1][1] * b[1][0];
    //@ ensures \result[1][1] == a[1][0] * b[0][1] + a[1][1] * b[1][1];
    public int[][] multiply(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ maintaining 0 <= i && i <= 2;
        //@ maintaining (\forall int x; 0 <= x && x < i; (\forall int y; 0 <= y && y < 2; c[x][y] == a[x][0] * b[0][y] + a[x][1] * b[1][y]));
        //@ decreases 2 - i;
        for (int i = 0; i < 2; i++) {
            //@ maintaining 0 <= j && j <= 2;
            //@ maintaining (\forall int y; 0 <= y && y < j; c[i][y] == a[i][0] * b[0][y] + a[i][1] * b[1][y]);
            //@ decreases 2 - j;
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
            }
        }
        return c;
    }
}
/home/max/Documents/JMLGPT/tmp/MatrixMul.java:18: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
                  ^
  Reason: Double rewriting of ident: i i_782_782___36 i_782_796___42
1 error

